# itesm-course

./: LICENSE  README.md
course_2/wrobot_control/: CMakeLists.txt  package.xml
course_2/wrobot_control/config/: param.yaml
course_2/wrobot_control/include/wrobot_control/: controller.hpp
course_2/wrobot_control/src/: controller.cpp  rosNode.cpp
course_3/gazebo_models/: CMakeLists.txt  package.xml
course_3/gazebo_models/launch/: robot.launch
course_3/gazebo_models/models/: empty.world
course_3/gazebo_models/models/wheeled_robot/: model.config  model.sdf
course_3/gazebo_models/models/wrobot/meshes/: chasis.dae  lidar.dae  wheel.dae
course_3/gazebo_models/resource/: wrobot_plugin.cc
course_3/gazebo_models/worlds/: empty.world
course_3/gazebo_ros_pkgs/gazebo_plugins/: CMakeLists.txt
course_3/wrobot_comm/: CMakeLists.txt  package.xml
course_3/wrobot_comm/msg/: WheelVelocity.msg
course_3/wrobot_control/config/: param.yaml
course_3/wrobot_control/include/wrobot_control/: controller.hpp
course_3/wrobot_control/launch/: controller.launch
course_3/wrobot_control/src/: controller.cpp  rosNode.cpp
course_4/dual-vnh5019-motor-shield/: DualVNH5019MotorShield.cpp
course_4/dual-vnh5019-motor-shield/examples/originales/: DualVNH5019MotorShield.cpp  DualVNH5019MotorShield.h
course_4/ros_arduino_bridge/ros_arduino_python/config/: my_arduino_params.yaml
