<package>
  <name>wrobot_control</name>
  <version>0.0.1</version>
  <description>The wrobot_control pkg</description>

  <maintainer email="lecampos@gdl.cinvestav.mx">Leo Campos</maintainer>
 
  <author>Leo Campos</author>
  

  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>wrobot_comm</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>wrobot_comm</run_depend>
</package>




