<package>
  <name>wrobot_gazebo</name>
  <version>0.0.1</version>
  <description>The wrobot_gazebo package</description>

  <maintainer email="lecampos@gdl.cinvestav.mx">Leo Campos</maintainer>
 
  <author>Leo Campos</author>
  

  <license>CLOSED</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>wrobot_comm</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>wrobot_comm</run_depend>
</package>
